20160111		4.6
	- Fixed bug when using sector size that isn't a multiple of 4
	(eg. 522 bytes)
	- Fixed a bug that caused hanging or scsi phase errors on
	high speed scsi hosts.
	- Fixed a hang when processing a SCSI RESET in a data phase.
	- scsi2sd-util: Fixed USB connection problems under Windows 10.
	- Added option to treat luns as separate devices
	- Improved boot up time.


20151105		4.5
	- Fix bug in SCSI MODE SENSE that returned the wrong mode type
		- Fixes CDROM emulation
	- Added selection delay parameter. This should be set to 1ms for older
	SCSI1 hardware, or 0ms for SCSI2 and Mac Plus.
	- Upgraded to wxWidgets 3.0.2
	- Fixed stability/performance issue for sector sizes above 512
	- Fixed bug that prevented the dvice working after "ejecting" a drive
	- Upgraded to Cypress PSoC Creator 3.3
	- Added experimental caching option. This provides a 2x speed up for
	sequential single-sector writes. It is disabled by default.
	- Disabled SCSI Disconnect support by default. There's now an option
	in scsi2sd-util to enable it. It should be left off unless you have
	a very good reason to enable it.

20150813		4.4
	- Added configuration option to allow SCSI2 mode. This option is OFF by
	default, and should only be enabled when using the SCSI2SD with a SCSI2 host
	controller. Extra timing delays are added in the default SCSI1/SASI mode to
	work with slow hardware.
	- Modified hot-swap card detection to work with longer (60cm) microSD to SD
	cables.
	- Fixed off-by-one error in scsi2sd-util "Auto" sector start feature.
	- Fixed crashes and stalls of scsi2sd-util after saving/loading options
	to/from the device
	- Fixed synchronous transfer request negotiation.
	SCSI2SD now negotiates back to async transfers instead of simply
	rejecting the message.
	- Fixed INQUIRY response to commands lacking an allocation length.
	- Firmware development updated to PSoC Creator 3.2 (from 3.1)

20150614        4.3
	- Added configurable disk geometry.