@@ -1,3 +1,6 @@
+2016xxxx		4.x
+	- Added support for configurable mode pages
+
 20160111		4.6
 	- Fixed bug when using sector size that isn't a multiple of 4
 	(eg. 522 bytes)
